--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -35,6 +35,14 @@
                 <li><a href="/contact.html">Contact me</a></li>
             </ul>
         </div>
+        <div class="flex-item">
+            <p><b>This site</b></p>
+            <ul class="list-blank">
+                <li><a href="https://github.com/LunarWatcher/LunarWatcher.github.io/tree/master">Website source</a></li>
+                <li><a href="https://github.com/LunarWatcher/LunarWatcher.github.io/blob/master/LICENSE">Content and source code license</a></li>
+                <li><a href="/privacy.html">Privacy policy</a></li>
+            </ul>
+        </div>
     </div>
     <div class="flex-horizontal container">
         <div class="flex-grow"></div>
