--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,14 +1,9 @@
 {{ define "main" }}
 
 <h1>{{ .Title }}</h1>
-<span class="post-meta">Posted on {{ partial "dformat.html" . }}</span>
-<br>
-{{ if isset .Params "tags" }}
-    {{ partial "tags.html" .}}
-{{ end  }}
-{{ if isset .Params "series" }}
-    {{ partial "series.html" . }}
-{{ end }}
+{{ partial "usercard.html" .}}
+
+
 {{ .Content }}
 
 {{ if not .Params.nocomments }}
@@ -25,7 +20,9 @@
                 crossorigin="anonymous"
                 async>
         </script>
-        <noscript>You've disabled JavaScript, which the comment system makes use of to load them on the site. The comment threads can be found <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/issues">in the issues for this repo</a>, if you don't trust this site and/or utterances. Note that unless someone has already commented, there isn't an issue made for this page yet.</noscript>
+        <noscript>You've disabled JavaScript, which the comment system makes use of to load them on the site.
+            The comment threads can be found <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/issues">in the issues for this repo</a>, 
+            if you don't trust this site and/or utterances. Note that unless someone has already commented, there isn't an issue made for this page yet.</noscript>
     </div>
 {{ end }}
 
