--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,7 +12,7 @@
 <!-- Scripts and stylesheets -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 {{ if .Params.mermaid }}
-<script src="https://unpkg.com/browse/mermaid@8.8.0/dist/mermaid.min.js"></script>
+<script src="https://unpkg.com/mermaid@8.8.0/dist/mermaid.min.js"></script>
 {{ end }}
 
 {{ $base := resources.Get "scss/style.scss" }}
