--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -26,6 +26,11 @@ body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, ol, ul {
 h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, ol, ul {
     margin-bottom: 15px;
 }
+h1 { font-size: 2.5rem; }
+h2 { font-size: 2.0rem; }
+h3 { font-size: 1.5rem; }
+h4 { font-size: 1.25rem; }
+h5, h6 { font-size: 1.15rem; }
 
 
 img:not(.nocenter) {
