--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,25 +1,5 @@
 <footer>
-    <!--<div class="container flex-vertical">-->
-        <!--<div class="footer-copyright flex-auto flex-horizontal">-->
-            <!--<div class="flex-item">-->
-                <!--<p>&copy; Olivia, 2019-2024</p>-->
-                <!--<a href="https://github.com/LunarWatcher/LunarWatcher.github.io/tree/master">Website source</a>,-->
-                <!--<a href="https://github.com/LunarWatcher/LunarWatcher.github.io/blob/master/LICENSE">license</a>,-->
-                <!--<a href="/privacy.html">privacy policy</a>-->
 
-                <!--<p>Content licensed under <a href="https://github.com/LunarWatcher/LunarWatcher.github.io/blob/master/LICENSE#L32">CC-By-SA 4.0</a></p>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--[> I'm not sure if this makes sense in responsive use-cases <]-->
-        <!--<div class="flex-full flex-horizontal">-->
-            <!--<div class="flex-grow"></div>-->
-            <!--<div class="flex-shrink">-->
-                <!--<p>Powered by <a href="https://gohugo.io/">Hugo</a>-->
-                    <!--[> Don't click the button. <]-->
-                    <!--(<a href="javascript:uwu()" id="uwu">UwU?</a>)</p>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
     <div class="container flex-horizontal">
         <div class="flex-item">
             <p><b>Social</b></p>
@@ -36,10 +16,10 @@
             </ul>
         </div>
         <div class="flex-item">
-            <p><b>This site</b></p>
+            <p><b>This website</b></p>
             <ul class="list-blank">
                 <li><a href="https://github.com/LunarWatcher/LunarWatcher.github.io/tree/master">Website source</a></li>
-                <li><a href="https://github.com/LunarWatcher/LunarWatcher.github.io/blob/master/LICENSE">Content and source code license</a></li>
+                <li>Content licensed under CC-By-SA 4.0. Website source code licensed under MIT. <a href="https://github.com/LunarWatcher/LunarWatcher.github.io/blob/master/LICENSE">Full license text</a></li>
                 <li><a href="/privacy.html">Privacy policy</a></li>
             </ul>
         </div>
