--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,14 +1,15 @@
 {{ define "main" }}
 
 <h1>{{ .Title }}</h1>
-{{ partial "usercard.html" .}}
-
+{{ partial "ingress.html" . }}
 
 {{ .Content }}
 
+<hr>
+{{ partial "post-end.html" . }}
+
 {{ if not .Params.nocomments }}
     <div class="comments">
-        <hr>
         <h2 style="padding-top: 20px !important;">Comments</h2>
         <i><p>All comments posted either through utteranc.es or manually on the associated GitHub issue end up on an associated issue in the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io">website GitHub repo</a>, and as such are required to follow the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/blob/master/.github/CODE_OF_CONDUCT.md">project code of conduct</a>. Remember this while writing comments.</p></i>
 
