--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,7 +1,3 @@
-/*
-Dear past me...
-The fuck is this garbage?
- */
 @import "syntax.scss";
 
 // Primary
@@ -26,12 +22,39 @@ body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, ol, ul {
 h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, ol, ul {
     margin-bottom: 15px;
 }
-h1 { font-size: 2.5rem; }
-h2 { font-size: 2.0rem; }
-h3 { font-size: 1.5rem; }
-h4 { font-size: 1.25rem; }
-h5, h6 { font-size: 1.15rem; }
 
+h1 { font-size: 2.50rem; }
+h2 { font-size: 2.00rem; }
+h3 { font-size: 1.50rem; }
+h4 { font-size: 1.25rem; }
+h5 { font-size: 1.15rem; }
+h6 { font-size: 1.05rem; }
+
+.target-highlight:target {
+    background-color: #ffedd9;
+    transition-duration: 2s;
+    &::after {
+        content: " (URL redirected here)";
+        font-size: 10px;
+        float: right;
+        padding-top: 1.1%;
+    }
+}
+
+h1, h2, h3, h4, h5, h6 {
+    &:target {
+        @extend .target-highlight;
+    }
+    color: $grey-primary;
+    font-weight: 400;
+
+}
+h1, h2 {
+    border-bottom: 1px solid #d1d1d1;
+}
+h3, h4, h5, h6 {
+    font-weight: bold;
+}
 
 img:not(.nocenter) {
     display: block;
@@ -131,15 +154,6 @@ ol {
     text-align: center;
 }
 
-// Dupes?
-h1, h2, h3, h4, h5, h6 {
-    color: $grey-primary;
-    font-weight: 400;
-
-}
-h1, h2 {
-    border-bottom: 1px solid #d1d1d1;
-}
 
 nav {
     h1, h2 {
@@ -176,11 +190,6 @@ footer {
     }
 }
 
-.nav-header {
-    float:left;
-    display: block;
-}
-
 header {
     nav {
 
@@ -190,7 +199,7 @@ header {
             text-decoration: none;
         }
 
-        ul>li, .nav-header {
+        ul>li {
             float: left;
             line-height: 64px;
         }
@@ -291,6 +300,9 @@ header {
 }
 
 // The fuck, could you possibly make the names on these any more vague?
+// The names are fine, but why the fuck are there two different classes?
+// Sounds like class="container" id="table-of-contents" makes more sense
+// or is this some pregenerated trash? (Container is not pregenerated)
 .container, .toc-container{
     margin: 0 auto;
     width: 90%;
@@ -349,19 +361,11 @@ blockquote.spoiler {
 }
 // }}}
 
-h3, h4, h5, h6 {
-    font-weight: bold;
-}
 
-// Blogging
+// Blogging {{{
 
 .grey-text {
     color: #666666;
-}
-
-.post-meta {
-    font-size: 14px;
-    color: #828282 !important;
 }
 
 .post-tag {
@@ -372,33 +376,36 @@ h3, h4, h5, h6 {
     box-sizing: border-box;
 }
 
-div.article {
-    padding-bottom: 3px;
+article {
+    //@extend .shade-box;
+
     border-bottom: 1px dashed black;
-    h1 {
+    padding-bottom: 3px;
+    margin-bottom: 15px;
+    h2 {
+        a {
+            text-decoration: none;
+        }
         border-bottom: none !important;
         margin-bottom: 0px !important;
         padding-bottom: 0px !important;
     }
 }
 
+div.ingress {
+    //padding-left: 2%;
+    padding-bottom: 15px;
+    font-size: 1.25rem;
+}
+// }}}
+
+// What the fuck is this for?
 // who in the fuck thought 6px is readable?!
 .cardinality > text {
     font-size: 12px;
 }
 
-.target-highlight:target, h1:target, h2:target, h3:target, h4:target, h5:target, h6:target {
-    background-color: #ffedd9;
-    transition-duration: 2s;
-    &::after {
-        content: " (URL redirected here)";
-        font-size: 10px;
-        float: right;
-        padding-top: 1.1%;
-    }
-}
-
-// Table of contents
+// Table of contents {{{
 @media screen and (min-width: 1088px) {
     .toc h2 {
         border-bottom: none !important;
@@ -448,7 +455,7 @@ div.article {
 #TableOfContents > ul > li > ul > li > ul > li > ul > li > ul > li  {
     display: none;
 }
-
+// }}}
 // tables {{{
 table, th, tr, td {
     border: 1px solid black;
@@ -459,49 +466,7 @@ table {
     margin-top: 2px;
     margin-bottom: 8px;
 }
-// }}}
-// Flexbox {{{
-// TODO: merge the tag flexbox and the home page flexbox
 
-.flex-col {
-    flex-direction: column;
-}
-.flex-nowrap {
-    flex-wrap: none;
-}
-.flex-nostretch {
-    align-items: flex-start;
-    align-content: flex-start;
-}
-.flex-box {
-    flex-wrap: wrap;
-    flex-direction: column;
-    display: flex;
-}
-.flex-item {
-    flex: 1 1 300px;
-    min-width: 300px;
-
-}
-.flex-item-box {
-    flex: 1 1 320px;
-    min-width: 320px !important;
-    padding-left: 4px;
-    padding-right: 4px;
-
-}
-.flex-box-tab {
-    background-color: lighten($pink-primary, 20%);
-    padding: 4px;
-    border-radius: 5px;
-    
-}
-p.flex-box-name  {
-    font-size: 1.5em;
-}
-
-// }}}
-// Table v2 {{{
 .plain-table-container > table {
     border-style: none;
     * {
@@ -546,9 +511,6 @@ tbody tr th {
 // }}}
 // Post listing {{{
 .meta-container {
-    margin-bottom: 9px;
-    padding: 3px;
-    border-bottom: dotted 1px black;
     box-sizing: content-box;
 }
 // }}}
@@ -571,15 +533,16 @@ img.text-small {
 }
 // }}}
 // Flexbox shit v2 {{{
-.flex-col-2 {
-    display: flex;
-    flex-direction: row;
-    row-gap: 3px;
+.flex-item {
+    flex: 1 1 300px;
+    min-width: 300px;
 }
 
 .flex-space {
     gap: 20px;
     flex-wrap: wrap;
+    
+    box-sizing: content-box;
 }
 
 .flex-horizontal {
@@ -594,6 +557,14 @@ img.text-small {
     display: flex;
     flex-direction: column;
 
+}
+
+.flex-nogap {
+    gap: 0 !important;
+}
+
+.flex-smallgap {
+    gap: 5px;
 }
 
 .flex-right {
@@ -630,6 +601,13 @@ div.small-paragraphs {
     p {
         margin: 0;
     }
+}
+
+.author-highlight {
+    //border: 2px solid $pink-primary;
+    border-radius: 7.5px;
+    padding: 5px;
+    box-sizing: border-box;
 }
 
 .accent-border {
