Bring hugo stuff up to date

--- a/layouts/partials/ingress.html
+++ b/layouts/partials/ingress.html
@@ -1,3 +1,4 @@
+{{ $taxonomy := "categories" }}
 <div class="ingress small-paragraphs">
     {{ if isset .Params "ingress" }}
         <p>{{ .Params.ingress }}</p>
