--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,3 +1,6 @@
-{{ range .Site.Menus.main }}
-<a href="{{ .URL }}">{{ .Name }}</a>
-{{ end }}
+<a href="/">Home</a>
+<a href="/posts/">Blog</a>
+<a href="/tags.html">Tags</a>
+<a href="/til/">TIL</a>
+<a href="/contact.html">Contact me</a>
+<a href="/pages.html">Pages</a>
