--- a/layouts/partials/post-end.html
+++ b/layouts/partials/post-end.html
@@ -24,3 +24,20 @@
     </div>
 
 </div>
+
+{{ if not .Params.nocomments }}
+    <div class="comments">
+        <h2 style="padding-top: 20px !important;">Comments</h2>
+        <i><p>All comments posted either through utteranc.es or manually on the associated GitHub issue end up on an associated issue in the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io">website GitHub repo</a>, and as such are required to follow the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/blob/master/.github/CODE_OF_CONDUCT.md">project code of conduct</a>. Remember this while writing comments.</p></i>
+
+        <script src="https://utteranc.es/client.js"
+                repo="LunarWatcher/lunarwatcher.github.io"
+                issue-term="pathname"
+                label="comments"
+                theme="github-light"
+                crossorigin="anonymous"
+                async>
+        </script>
+        <noscript>You've disabled JavaScript, which the comment system makes use of to load them on the site. The comment threads can be found <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/issues">in the issues for this repo</a>, if you don't trust this site and/or utterances. Note that unless someone has already commented, there isn't an issue made for this page yet.</noscript>
+    </div>
+{{ end }}
