Clean up til/index

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -541,7 +541,7 @@ img.text-small {
     gap: 20px;
     flex-wrap: wrap;
     
-    box-sizing: content-box;
+    box-sizing: border-box;
 }
 
 .flex-horizontal {
