--- a/layouts/partials/ingress.html
+++ b/layouts/partials/ingress.html
@@ -1,7 +1,10 @@
 {{ $taxonomy := "categories" }}
 <div class="ingress small-paragraphs">
     {{ if isset .Params "ingress" }}
-        <p>{{ .Params.ingress }}</p>
+        <p>{{ .Params.ingress | .RenderString }}</p>
     {{ end }}
-    <span class="grey-text text-small">Posted on {{ partial "dformat.html" . }}</span>
+    <span class="grey-text text-small">Posted on {{ partial "dformat.html" (dict "Date" .Date) }}</span>
+    {{ if isset .Params "lastmod" }}
+        <span class="grey-text text-small">- Last modified on {{partial "dformat.html" (dict "Date" .Params.lastmod )}}</span>
+    {{ end }}
 </div>
