--- a/layouts/tags/tag_list.html
+++ b/layouts/tags/tag_list.html
@@ -11,7 +11,7 @@
     <div class="flex-horizontal">
         {{ range .Pages }}
         <div class="shade-box" style="min-width: 200px; flex: 0 1 200px;">
-            <p><a href="{{ .Permalink }}">{{ .Title | markdownify }}</a></p>
+            <p><a href="{{ .Permalink }}">{{ .Title | markdownify }}</a> ({{ .Site.Taxonomies.tags.Count .Title }})</p>
             {{ if .Params.description }}
                 <p>{{ .Params.description }}</p>
             {{ else if isset .Site.Params.tags .Title }}
