--- a/layouts/partials/tags.html
+++ b/layouts/partials/tags.html
@@ -1,5 +1,5 @@
 {{ $taxonomy := "tags" }}
-{{ with .Param $taxonomy }}
+{{ with (sort (.Param $taxonomy) ) }}
     <span class="post-meta">
     {{ range $index, $tag := . }}
         {{ with $.Site.GetPage (printf "/%s/%s" $taxonomy ($tag | urlize)) -}}
