--- a/layouts/partials/post-end.html
+++ b/layouts/partials/post-end.html
@@ -28,7 +28,7 @@
 {{ if not .Params.nocomments }}
     <div class="comments">
         <h2 style="padding-top: 20px !important;">Comments</h2>
-        <i><p>All comments posted either through utteranc.es or manually on the associated GitHub issue end up on an associated issue in the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io">website GitHub repo</a>, and as such are required to follow the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/blob/master/.github/CODE_OF_CONDUCT.md">project code of conduct</a>. Remember this while writing comments.</p></i>
+        <i><p>Note that all comments are required to follow the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/blob/master/.github/CODE_OF_CONDUCT.md">code of conduct</a></p></i>
 
         <script src="https://utteranc.es/client.js"
                 repo="LunarWatcher/lunarwatcher.github.io"
