--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,15 +4,15 @@
         <div class="flex-item">
             <p><b>Social</b></p>
             <ul class="list-blank">
-                <li><a href="//discord.gg/{{.Site.Params.discord}}">Discord</a></li>
+                <li><a href="//discord.gg/{{.Site.Params.discord}}">Discord server</a></li>
                 <li><a href="//github.com/LunarWatcher">GitHub</a></li>
+                <li><a href="/contact.html">Other contact methods</a></li>
             </ul>
         </div>
         <div class="flex-item">
             <p><b>Useful links</b></p>
             <ul class="list-blank">
                 <li><a href="/posts/feed.xml">Blog RSS feed</a></li>
-                <li><a href="/contact.html">Contact me</a></li>
             </ul>
         </div>
         <div class="flex-item">
