--- a/layouts/partials/post-end.html
+++ b/layouts/partials/post-end.html
@@ -1,32 +1,35 @@
-<div class="author-highlight container flex-center small-paragraphs">
-    <div class="flex-horizontal">
-        <p class="flex-shrink" style="align-self: flex-end;">Tags:
-        <span>
-            {{ if isset .Params "tags" }}
-                {{ partial "tags.html" . }}
+    <div class="flex-horizontal small-paragraphs container author-highlight flex-align-end">
+        <div class="flex-vertical flex-shrink flex-smallgap">
+            <span class="grey-text text-small">Posted on {{ partial "dformat.html" . }}</span>
+            {{ if and (isset .Params "lastmod") (ne .Date .Params.lastmod) }}
+                <span class="grey-text text-small">Last updated {{partial "dformat.html" (dict "Date" .Params.lastmod )}}</span>
             {{ end }}
-            {{ if isset .Params "series" }}
-                / Posted in {{ partial "series.html" . }}
-            {{ end }}
-        </span>
-        </p>
+            <div style="min-height: 36px" class="flex-horizontal flex-smallgap flex-align-center">
+                <p class="flex-shrink">Tags:
+                <span>
+                    {{ if isset .Params "tags" }}
+                        {{ partial "tags.html" . }}
+                    {{ end }}
+                    {{ if isset .Params "series" }}
+                        / Posted in {{ partial "series.html" . }}
+                    {{ end }}
+                </span>
+                </p>
+            </div>
+        </div>
         <div class="flex-grow"></div>
 
         <div class="flex-vertical flex-shrink flex-smallgap">
-            <span class="grey-text text-small">Posted on {{ partial "dformat.html" . }} by</span>
-            {{ if isset .Params "lastmod" }}
-                <span class="grey-text text-small">Last updated {{partial "dformat.html" (dict "Date" .Params.lastmod )}}</span>
-            {{ end }}
+            <span class="grey-text text-small">Author:</span>
             <div class="flex-horizontal flex-smallgap" id="author-wrapper">
+                <span class="flex-horizontal flex-smallgap" style="align-items: center">
                 <img src="https://avatars.githubusercontent.com/u/29489988" class="circle accent-border text-small nocenter" />
-                <span style="margin: auto 0">
                 <a href="/contact.html" style="margin: auto 0">Olivia</a>
                 </span>
             </div>
         </div>
     </div>
 
-</div>
 
 {{ if not .Params.nocomments }}
     <div class="comments">
