--- a/layouts/partials/post-end.html
+++ b/layouts/partials/post-end.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div>
-        <p>Share this article: <a href="#" onclick="javascript:copyLink(event, {{ .Permalink }})">Link</a></p>
+        <p>Share this post: <a href="#" onclick="javascript:copyLink(event, {{ .Permalink }})">Link</a></p>
     </div>
 </div>
 
