--- a/layouts/partials/post-listing.html
+++ b/layouts/partials/post-listing.html
@@ -1,5 +1,17 @@
 <article>
     <h2><a href="{{ .Permalink }}">{{ if .Draft }}{{ T "draft" }}: {{ end }}{{ .Title | markdownify }}</a></h2>
+    <div class="meta-container grey-text text-small">
+        {{ if .Params.Category }}
+        <br><span class="post-meta">Post type: {{ .Params.Category }}</span>
+        {{ end }}
+        Posted <time>{{ partial "dformat.html" . }}</time>
+        {{ if isset .Params "tags" }}
+        &#124; {{ partial "tags.html" . }}
+        {{ end }}
+        {{ if isset .Params "series" }}
+        {{ partial "series.html" . }}
+        {{ end }}
+    </div>
     <p>
     {{ if isset .Params "ingress" }}
         {{ .Params.ingress }}
@@ -8,18 +20,6 @@
     {{ end }}
     </p>
     <div>
-        <a href="{{ .RelPermalink }}">Read More...</a>
-    </div>
-    <div class="meta-container grey-text">
-        {{ if .Params.Category }}
-        <br><span class="post-meta">Post type: {{ .Params.Category }}</span>
-        {{ end }}
-        Posted <time>{{ partial "dformat.html" . }}</time>
-        {{ if isset .Params "tags" }}
-        / {{ partial "tags.html" . }}
-        {{ end }}
-        {{ if isset .Params "series" }}
-        / Posted in {{ partial "series.html" . }}
-        {{ end }}
+        <a href="{{ .RelPermalink }}">Continue reading</a>
     </div>
 </article>
