Reword link copying

--- a/layouts/partials/post-end.html
+++ b/layouts/partials/post-end.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div>
-        <p>Share this post: <a href="#" onclick="javascript:copyLink(event, {{ .Permalink }})">Link</a></p>
+        <p>Share this post: <a href="#" onclick="javascript:copyLink(event, {{ .Permalink }})">Copy link</a></p>
     </div>
 </div>
 
